# weekly-marketing-report

./: .env.example  .gitignore  README.md  ROUTINE_SETUP.md  plan.md  pyproject.toml
.claude/skills/analyze-content-performance/: SKILL.md
.claude/skills/analyze-content-performance/scripts/: analyze.py
.claude/skills/analyze-keyword-opportunities/: SKILL.md
.claude/skills/analyze-keyword-opportunities/scripts/: analyze.py
.claude/skills/analyze-seo-health/: SKILL.md
.claude/skills/analyze-seo-health/scripts/: analyze.py
.claude/skills/compose-email-summary/: SKILL.md
.claude/skills/compose-email-summary/scripts/: send.py
.claude/skills/compose-weekly-report/: SKILL.md
.claude/skills/compose-weekly-report/scripts/: compose.py
.claude/skills/fetch-dataforseo/: SKILL.md
.claude/skills/fetch-dataforseo/scripts/: fetch.py
.claude/skills/fetch-fathom/: SKILL.md
.claude/skills/fetch-fathom/scripts/: fetch.py
.claude/skills/fetch-kit/: SKILL.md
.claude/skills/fetch-kit/scripts/: fetch.py
.claude/skills/fetch-pagespeed/: SKILL.md
.claude/skills/fetch-pagespeed/scripts/: fetch.py
.claude/skills/fetch-post-manifest/: SKILL.md
.claude/skills/fetch-post-manifest/scripts/: fetch.py
.claude/skills/fetch-search-console/: SKILL.md
.claude/skills/fetch-search-console/scripts/: fetch.py
lib/: credential.py  env.py  storage.py  week.py
scripts/: apply_keywords.py  check_env.py  dump_creds_for_routine.py  run.sh  run_pipeline.py
